--- a/templates/index.html
+++ b/templates/index.html
@@ -180,6 +180,181 @@
                 </div>
             </div>
 
+            <!-- HERE IS THE START OF A NEW TABLE-->
+
+
+            <div class="jumbotron p-3">
+                <h2>
+                    Manage <b> Employees</b> <button type="button" class="btn btn-success float-right"
+                    data-toggle="modal" data-target="#myModal"> Add New Employees </button>
+                </h2>
+
+                {% with messages = get_flashed_messages() %}
+                {% if messages %}
+                {% for message in messages %}
+
+                <div class="alert alert-success" alert-dismissable role="alert">
+                    <button type="button" class="close" data-dismiss="alert" aria-label="close">
+                        <span aria-hidden="true">x</span>
+                    </button>
+                    {{message}}
+                </div>
+                
+                {% endfor %}
+                {% endif %}
+                {% endwith %}
+
+                <table class="table table-hover table-dark">
+                    <tr>
+                        <th>SSN</th>
+                        <th>DOB</th>
+                        <th>First Name</th>
+                        <th>Middle Name</th>
+                        <th>Last Name</th>
+                        <th>Address</th>
+                        <th>Action</th>
+                    </tr>
+
+                    {% for row in employees %} 
+                    <tr>
+                        <td>{{row.0}}</td>
+                        <td>{{row.1}}</td>
+                        <td>{{row.2}}</td>
+                        <td>{{row.3}}</td>
+                        <td>{{row.4}}</td>
+                        <td>{{row.5}}</td>
+                        
+                        <td>
+                            <a href="/updateEmployee/{{row.2}}" class="btn btn-warning" btn-xs data-toggle="modal" data-target="#modaledit{{row.2}}">Edit</a>
+                            <a href="/deleteEmployee/{{row.0}}" class="btn btn-danger btn-xs" onclick="return confirm('Are you sure?')">Delete</a>
+                        </td>
+                    </tr>
+
+                                
+                <!-- Model EDIT employee -->
+                <div id="modaledit{{row.2}}" class="modal fade" role="dialog">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h4 class="modal-title">Update Information</h4>
+                            </div>
+                            <div class="modal-body">
+                                <form action="{{url_for('updateEmployee')}}" method="POST">
+
+                                    <!-- Form model for the SSN -->
+                                    <div class="form-group">
+                                        <label>SSN:</label>
+                                        <input type="text" class="form-control" name="SSN" value="{{row.0}}" readonly>
+                                    </div>
+
+                                    <!-- Form model for the DOB -->
+                                    <div>
+                                        <label>DOB:</label>
+                                        <input type="number" class="form-control" name="DOB" value="{{row.1}}">
+                                    </div>
+
+                                    <!-- Form model for the first name -->
+                                    <div>
+                                        <label>First Name:</label>
+                                        <input type="text" class="form-control" name="Fname" value="{{row.2}}">
+                                    </div>
+
+                                    <!-- Form model for the middle name -->
+                                    <div>
+                                        <label>Middle Name:</label>
+                                        <input type="text" class="form-control" name="Minit" value="{{row.3}}">
+                                    </div>
+
+                                    <!-- Form model for the last name -->
+                                    <div>
+                                        <label>Last Name:</label>
+                                        <input type="text" class="form-control" name="Lname" value="{{row.4}}">
+                                    </div>
+
+                                    <!-- Form model for the address -->
+                                    <div>
+                                        <label>Address:</label>
+                                        <input type="text" class="form-control" name="Address" value="{{row.5}}">
+                                    </div>
+
+                                    <!-- Button for submitting -->
+                                    <div>
+                                        <button class="btn btn-primary" type="submit">Update</button>
+                                    </div>
+                                </form>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                {% endfor %}
+                </table>
+            </div>
+
+            <!-- Model ADD employee -->
+
+            <div id="myModal" class="modal fade" role="dialog">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h4 class="modal-title">Add Employee</h4>
+                        </div>
+                        <div class="modal-body">
+                            <form action="{{url_for('insertEmployee')}}" method="POST">
+
+                                <!-- Form model for the SSN -->
+                                <div class="form-group">
+                                    <label>SSN:</label>
+                                    <input type="number" class="form-control" name="SSN" required="1"></input>
+                                </div>
+
+                                <!-- Form model for the DOB -->
+                                <div>
+                                    <label>DOB:</label>
+                                    <input type="number" class="form-control" name="DOB" required="1"></input>
+                                </div>
+
+                                <!-- Form model for the first name -->
+                                <div>
+                                    <label>First Name:</label>
+                                    <input type="text" class="form-control" name="Fname" required="1"></input>
+                                </div>
+
+                                <!-- Form model for the middle name -->
+                                <div>
+                                    <label>Middle Name:</label>
+                                    <input type="text" class="form-control" name="Minit"></input>
+                                </div>
+
+                                <!-- Form model for the last name -->
+                                <div>
+                                    <label>Last Name:</label>
+                                    <input type="text" class="form-control" name="Lname" required="1"></input>
+                                </div>
+
+                                <!-- Form model for the address -->
+                                <div>
+                                    <label>Address:</label>
+                                    <input type="text" class="form-control" name="Address" required="1"></input>
+                                </div>
+
+                                <!-- Button for submitting -->
+                                <div>
+                                    <button class="btn btn-primary" type="submit">Add Employee</button>
+                                </div>
+                            </form>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- END OF NEW TABLE-->
+
         </div>
     </div>
 </div>
