--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> {% block title %} {% endblock %} </title>
 </head>
-<body>
+<body style="background-color: #292929;">
     
     {% block body %} {% endblock %}
 
