--- a/templates/header.html
+++ b/templates/header.html
@@ -4,10 +4,10 @@
 
 {% block body %}
 
-<div class="jumbotron p-3">
-    <div class="well text-center">
+<div class="jumbotron p-3" style="background:#292929;">
+    <div class="well text-center" style="color: white">
         
-        <h1>Penaloza LLC</h1>
+        <h1>Penaloza Inc.</h1>
 
     </div>
 </div>
