--- a/templates/header.html
+++ b/templates/header.html
@@ -7,7 +7,7 @@
 <div class="jumbotron p-3" style="background:#292929;">
     <div class="well text-center" style="color: white">
         
-        <h1>Penaloza Inc.</h1>
+        <h1>Peñaloza Inc.</h1>
 
     </div>
 </div>
