--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,21 @@
     <div class="row">
         <div class="col md-12">
 
+          {% with messages = get_flashed_messages() %}
+          {% if messages %}
+          {% for message in messages %}
+
+          <div class="alert alert-info" alert-dismissable role="alert">
+              <button type="button" class="close" data-dismiss="alert" aria-label="close">
+                  <span aria-hidden="true">x</span>
+              </button>
+              {{message}}
+          </div>
+
+          {% endfor %}
+          {% endif %}
+          {% endwith %}
+
             <!-- HERE IS THE START OF EMPLOYEE TABLE-->
 
             <div class="jumbotron p-3" style="background:#292929; color: white" onmouseover="this.style.background='#99ccff'; this.style.color='black'" onmouseout="this.style.background='#292929'; this.style.color='white'">
@@ -17,21 +32,6 @@
                     Manage <b> Employees</b> <button type="button" class="btn btn-success float-right"
                     data-toggle="modal" data-target="#myModal"> Add New Employees </button>
                 </h2>
-
-                {% with messages = get_flashed_messages() %}
-                {% if messages %}
-                {% for message in messages %}
-
-                <div class="alert alert-success" alert-dismissable role="alert">
-                    <button type="button" class="close" data-dismiss="alert" aria-label="close">
-                        <span aria-hidden="true">x</span>
-                    </button>
-                    {{message}}
-                </div>
-                
-                {% endfor %}
-                {% endif %}
-                {% endwith %}
 
                 <table class="table table-hover table-dark">
                     <tr>
@@ -44,7 +44,7 @@
                         <th>Action</th>
                     </tr>
 
-                    {% for row in employees %} 
+                    {% for row in employees %}
                     <tr>
                         <td>{{row.0}}</td>
                         <td>{{row.1}}</td>
@@ -52,14 +52,14 @@
                         <td>{{row.3}}</td>
                         <td>{{row.4}}</td>
                         <td>{{row.5}}</td>
-                        
+
                         <td>
                             <a href="/updateEmployee/{{row.2}}" class="btn btn-warning" btn-xs data-toggle="modal" data-target="#modaledit{{row.2}}">Edit</a>
                             <a href="/deleteEmployee/{{row.0}}" class="btn btn-danger btn-xs" onclick="return confirm('Are you sure?')">Delete</a>
                         </td>
                     </tr>
 
-                                
+
                 <!-- Model EDIT employee -->
                 <div id="modaledit{{row.2}}" class="modal fade" role="dialog">
                     <div class="modal-dialog">
@@ -79,7 +79,7 @@
                                     <!-- Form model for the DOB -->
                                     <div>
                                         <label>DOB:</label>
-                                        <input type="number" class="form-control" name="DOB" value="{{row.1}}">
+                                        <input type="date" class="form-control" name="DOB" value="{{row.1}}">
                                     </div>
 
                                     <!-- Form model for the first name -->
@@ -137,13 +137,13 @@
                                 <!-- Form model for the SSN -->
                                 <div class="form-group">
                                     <label>SSN:</label>
-                                    <input type="number" class="form-control" name="SSN" required="1"></input>
+                                    <input type="text" placeholder="9 NUMBERS" pattern="[0-9]{9}" maxlength="9" class="form-control" name="SSN" required="1"></input>
                                 </div>
 
                                 <!-- Form model for the DOB -->
                                 <div>
                                     <label>DOB:</label>
-                                    <input type="number" class="form-control" name="DOB" required="1"></input>
+                                    <input type="date" class="form-control" name="DOB" required="1"></input>
                                 </div>
 
                                 <!-- Form model for the first name -->
@@ -193,21 +193,6 @@
                     data-toggle="modal" data-target="#myDepartmentModal"> Add New Department </button>
                 </h2>
 
-                {% with messages = get_flashed_messages() %}
-                {% if messages %}
-                {% for message in messages %}
-
-                <div class="alert alert-success" alert-dismissable role="alert">
-                    <button type="button" class="close" data-dismiss="alert" aria-label="close">
-                        <span aria-hidden="true">x</span>
-                    </button>
-                    {{message}}
-                </div>
-                
-                {% endfor %}
-                {% endif %}
-                {% endwith %}
-
                 <table class="table table-hover table-dark">
                     <tr>
                         <th>Department Number</th>
@@ -216,7 +201,7 @@
                         <th>Action</th>
                     </tr>
 
-                    {% for row in departments %} 
+                    {% for row in departments %}
                     <tr>
                         <td>{{row.0}}</td>
                         <td>{{row.1}}</td>
@@ -227,7 +212,7 @@
                         </td>
                     </tr>
 
-                                
+
                 <!-- Model EDIT department -->
                 <div id="modaleditDepartment{{row.0}}" class="modal fade" role="dialog">
                     <div class="modal-dialog">
@@ -253,7 +238,7 @@
                                     <!-- Form model for the manager SSN -->
                                     <div>
                                         <label>Manager SSN:</label>
-                                        <input type="number" class="form-control" name="managerSSN" value="{{row.2}}">
+                                        <input type="text" placeholder="9 NUMBERS" pattern="[0-9]{9}" maxlength="9" class="form-control" name="managerSSN" value="{{row.2}}">
                                     </div>
 
                                     <!-- Button for submitting -->
@@ -299,7 +284,7 @@
                                 <!-- Form model for the manager SSN -->
                                 <div>
                                     <label>Manager SSN:</label>
-                                    <input type="number" class="form-control" name="managerSSN" required="1"></input>
+                                    <input type="text" placeholder="9 NUMBERS" pattern="[0-9]{9}" maxlength="9" class="form-control" name="managerSSN" required="1"></input>
                                 </div>
 
                                 <!-- Button for submitting -->
@@ -325,21 +310,6 @@
                     data-toggle="modal" data-target="#myProjectModal"> Add New Project </button>
                 </h2>
 
-                {% with messages = get_flashed_messages() %}
-                {% if messages %}
-                {% for message in messages %}
-
-                <div class="alert alert-success" alert-dismissable role="alert">
-                    <button type="button" class="close" data-dismiss="alert" aria-label="close">
-                        <span aria-hidden="true">x</span>
-                    </button>
-                    {{message}}
-                </div>
-                
-                {% endfor %}
-                {% endif %}
-                {% endwith %}
-
                 <table class="table table-hover table-dark">
                     <tr>
                         <th>Project Name</th>
@@ -348,7 +318,7 @@
                         <th>Action</th>
                     </tr>
 
-                    {% for row in projects %} 
+                    {% for row in projects %}
                     <tr>
                         <td>{{row.0}}</td>
                         <td>{{row.1}}</td>
@@ -359,7 +329,7 @@
                         </td>
                     </tr>
 
-                                
+
                 <!-- Model EDIT project -->
                 <div id="modaleditProject{{row.1}}" class="modal fade" role="dialog">
                     <div class="modal-dialog">
@@ -456,21 +426,6 @@
                     data-toggle="modal" data-target="#myWorksModal"> Add New Work Relationship </button>
                 </h2>
 
-                {% with messages = get_flashed_messages() %}
-                {% if messages %}
-                {% for message in messages %}
-
-                <div class="alert alert-success" alert-dismissable role="alert">
-                    <button type="button" class="close" data-dismiss="alert" aria-label="close">
-                        <span aria-hidden="true">x</span>
-                    </button>
-                    {{message}}
-                </div>
-                
-                {% endfor %}
-                {% endif %}
-                {% endwith %}
-
                 <table class="table table-hover table-dark">
                     <tr>
                         <th>SSN</th>
@@ -480,7 +435,7 @@
                         <th>Action</th>
                     </tr>
 
-                    {% for row in works %} 
+                    {% for row in works %}
                     <tr>
                         <td>{{row.0}}</td>
                         <td>{{row.1}}</td>
@@ -492,7 +447,7 @@
                         </td>
                     </tr>
 
-                                
+
                 <!-- Model EDIT works -->
                 <div id="modaleditWorks{{row.0}}" class="modal fade" role="dialog">
                     <div class="modal-dialog">
@@ -544,7 +499,7 @@
                 </table>
             </div>
 
-            <!-- Model ADD project -->
+            <!-- Model ADD works -->
 
             <div id="myWorksModal" class="modal fade" role="dialog">
                 <div class="modal-dialog">
@@ -558,7 +513,7 @@
                                 <!-- Form model for the SSN -->
                                 <div class="form-group">
                                     <label>SSN:</label>
-                                    <input type="number" class="form-control" name="SSN" required="1"></input>
+                                    <input type="text" placeholder="9 NUMBERS" pattern="[0-9]{9}" maxlength="9" class="form-control" name="SSN" required="1"></input>
                                 </div>
 
                                 <!-- Form model for the project name -->
